syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "pkg/proto/v1/creditcardpb";

package creditcard.v1;

service CreditCardsVault {
  rpc AddCreditCard(AddCreditCardRequest) returns (google.protobuf.Empty);
  rpc GetCreditCard(GetCreditCardRequest) returns (CreditCard);
  rpc UpdateCreditCard(UpdateCreditCardRequest) returns(google.protobuf.Empty);
  rpc IndexCreditCards(google.protobuf.Empty) returns (IndexCreditCardsResponse);
  rpc DeleteCreditCard(DeleteCreditCardRequest) returns (google.protobuf.Empty);
}

message CreditCard {
  bytes name = 1;
  // The field will contain credit card details in the format number:month/year:cvv:owner,
  // where the owner can be omitted.
  bytes data = 2;
  optional bytes notes = 3;
}

message AddCreditCardRequest {
  CreditCard card = 1;
}

message GetCreditCardRequest {
  bytes name = 1;
}

message UpdateCreditCardRequest {
  bytes name = 1;

  // The CreditCard resource which replaces the resource on the server.
  message CreditCard {
    optional bytes name = 1;
    optional bytes data = 2;
    optional bytes notes = 3;
  }
  CreditCard card = 2;
}

message IndexCreditCardsResponse {
  repeated bytes names = 1;
}

message DeleteCreditCardRequest {
  bytes name = 1;
}